--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
         <nav class="header-nav">
             <a href="./index.html" class="logo"><span class="color-logo">Web</span>Studio</a>
         <ul class="site-nav list">
-            <li class="nav-item"><a href="./index.html" class="link current">Studio</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+            <li class="nav-item"><a href="./index.html" class="link">Studio</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="link current">Portfolio</a></li>
             <li class="nav-item"><a href="" class="link">Contacts</a></li>
         </ul>
     </nav>
