--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
    <section class="main-section">
     <div class="container">
     <h1 class="main-text">Effective Solutions for Your Business</h1>
-    <button type="button" class="main-button">Order Service</button>
+    <button type="button" class="main-button" data-modal-open>Order Service</button>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-button" data-modal-close>
+                <svg class="svg-modal">
+                    <use href="./images/symbol-defs.svg#icon-close-modal"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
 </div>
    </section>
    <section class="about">
@@ -333,5 +342,6 @@
     </div>
 </div>
 </footer>
+<script src="./js/modal.js"></script>
 </body>
 </html>
