--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,10 @@
         </ul>
     <ul class="list portfolio-list">
         <li class="portfolio-item">
-            <img src="./images/portfolio/bankingapp.jpg" alt="banking app" width="360">
+            <div class="portfolio-overlay">
+                <img src="./images/portfolio/bankingapp.jpg" alt="banking app" width="360">
+                <!-- <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> -->
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Banking App Interface Concept</h2>
                 <p class="item-project">App</p>
