--- a/portfolio.html
+++ b/portfolio.html
@@ -38,70 +38,112 @@
         </ul>
     <ul class="list portfolio-list">
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
             <div class="portfolio-overlay">
                 <img src="./images/portfolio/bankingapp.jpg" alt="banking app" width="360">
-                <!-- <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> -->
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Banking App Interface Concept</h2>
                 <p class="item-project">App</p>
                 </div>
+            </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/payment.jpg" alt="payment" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-items">
                 <h2 class="item-title">Cashless Payment</h2>
                 <p class="item-project">Marketing</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/meditationapp.jpg" alt="meditation app" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Meditaion App</h2>
                 <p class="item-project">App</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/taxi.jpg" alt="taxi" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Taxi Service</h2>
                 <p class="item-project">Marketing</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/illustrations.jpg" alt="illustrations" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Screen Illustrations</h2>
                 <p class="item-project">Design</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/coursers.jpg" alt="courses" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Online Courses</h2>
                 <p class="item-project">Marketing</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/stories.jpg" alt="stories" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Instagram Stories Concept</h2>
                 <p class="item-project">Design</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/food.jpg" alt="Organic Food" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Organic Food</h2>
                 <p class="item-project">Web Site</p>
                 </div>
+                </a>
         </li>
         <li class="portfolio-item">
+            <a href="" class="card-hover link">
+            <div class="portfolio-overlay">
             <img src="./images/portfolio/coffee.jpg" alt="ноутбук" width="360" class="portfolio-img">
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-items">
                     <h2 class="item-title">Fresh Coffee</h2>
                 <p class="item-project">Web Site</p>
                 </div>
+                </a>
         </li>
     </ul>
         </div>
